# Federated-Learning

./: .env.example  .gitignore  CLAUDE.md  README.md  WORKPLAN.md  docker-compose.yml  pyproject.toml
client/: Dockerfile  __init__.py  config.py  main.py
client/comms/: __init__.py  fl_client.py  heartbeat.py
client/engine/: __init__.py  data_loader.py  local_trainer.py  scheduler.py
client/tests/: test_comms.py  test_engine.py  test_main.py
client/ui/: __init__.py  app.py
docs/: DB_SCHEMA.md  DESIGN_SPEC.md  DEV_SETUP.md  FUNCTIONAL_SPEC.md  PRODUCTION.md  STARTUP.md  SYSTEM_DIAGRAM.html  TECHNICAL_SPEC.md  USAGE_GUIDE.md
requirements/: base.txt  client.txt  server.txt
scripts/: generate_certs.sh  generate_synthetic_data.py  init_db.py  run_simulation.py  visualise_results.py
server/: Dockerfile  __init__.py  config.py  main.py
server/api/: __init__.py  auth.py  federation.py  health.py  models.py
server/core/: __init__.py  aggregator.py  model_registry.py  round_manager.py
server/db/: __init__.py  database.py  models.py
server/tests/: test_api.py  test_config.py  test_core.py  test_db.py  test_main.py
server/ui/: __init__.py  app.py
shared/: __init__.py
shared/crypto/: __init__.py  noise.py  secure_agg.py
shared/models/: __init__.py  combined_1a.py  hermia.py  manabe.py  pinn.py  polarization.py
shared/schemas/: __init__.py  auth.py  federation.py  filtration.py
shared/tests/: test_combined_1a.py  test_crypto.py  test_hermia.py  test_manabe.py  test_pinn.py  test_polarization.py  test_schemas.py  test_utils.py
(+24 files in other folders)
